app/argocd/base/argocd-https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-redirect-https
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
